# rasterdb

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  RASTERDF_CUDF_API_PLAN.md  RASTERDF_REORGANIZATION_GUIDE.md  README.MD  b_contains.sql  b_like.sql  build.sh  clickbench_load_duckdb.sql  extension_config.cmake  install.sh  pixi.toml  run-tpch.sh  run_benchmark.sh  run_official.sh  setup_sirius.sh  setup_test_datasets.sh  tpch-queries-mod.sql  tpch-queries-run.sql  tpch-queries.sql  tpch_load.sql  tpch_load_mini.sql  tpch_query.txt  util.py
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: check.yml  sirius_test.yml  test.yml
benchmark_results/: calibrate_p1b.py  clickbench_results.csv  clickbench_results.md  correctness_baseline_notes.md  duckdb_cpu_golden_10m.txt  golden_outputs_10m.json  gpu_baseline_golden_10m.txt  l40s_2026-02-28_015834.txt  l40s_2026-02-28_015839.txt  p1_count_distinct_raw.txt  p1_mixed_agg_raw.txt  p3_strlen_optimization_raw.txt  p4_string_hash_groupby.patch.txt  rtx6000_10m_baseline.csv  rtx6000_10m_baseline_raw.txt  rtx6000_10m_baseline_summary.txt  run_benchmark.sh  run_query.sh  run_tpch.sh  validate_optimization.py
cmake/: CMakePresets.json
devesh_benchmarking/: generate_synthetic.py  get_datasets.py  giant_synthetic_bench.sql  large_contains.sql  large_like.sql  large_strings_bench.sql  longest_line.py  synthetic_bench.sql  tpch_bench.sql  wiki_contains.sql  wiki_like.sql  wikipedia_bench.sql
devesh_benchmarking/distributions/: generate_distribution.py
docs/: L40S_SETUP.md  OPTIMIZATION_ANALYSIS.md  README.md  UPDATING.md  clickbench_optimization_analysis.md  glossary.md  porting_to_dev_fused_kernel.md  sirius_architecture.md
docs/onboarding-docs/: pipeline-execution.md
graphs/: graphs_07-31.py  measuring_skew_of_datasets.py
legacy/: arithmetic_expression.cu  distinct_grouped_aggregate.cu  gpu_expression_executor.cpp  gpu_expression_executor.hpp  grouped_aggregate.cu  load.txt  query_specific_filter.cpp  query_specific_filter.cu  query_specific_projection.cpp  query_specific_projection.cu  sirius_extension_cuda.cu  string_grouped_aggregate.cu  test_cudf.cu  test_sorting.cu  ungrouped_aggregate.cu
scripts/: extension-upload.sh  patch_config.py  pixi_activate.sh  rasterdb_engine.py  run-tpch.sh  tpch-queries.sql
scripts/clickbench_runner/: runner.py
src/: config.cpp  cpu_cache.cpp  extension_lock.cpp  fallback.cpp  gpu_buffer_manager.cpp  gpu_columns.cpp  gpu_context.cpp  gpu_executor.cpp  gpu_expression_executor.cpp  gpu_meta_pipeline.cpp  gpu_physical_operator.cpp  gpu_physical_plan_generator.cpp  gpu_pipeline.cpp  gpu_query_result.cpp  rasterdb_config.cpp  rasterdb_context.cpp  rasterdb_engine.cpp  rasterdb_extension.cpp  rasterdb_interface.cpp  sirius_config.cpp  sirius_context.cpp  sirius_engine.cpp  sirius_extension.cpp  sirius_interface.cpp  sirius_task_creator.cpp  task_creator.cpp
src/creator/: CMakeLists.txt  downgrade_task_creator.cpp  sirius_task_creator.cpp  task_creator.cpp
src/cuda/: allocator.cu  communication.cu  print.cu  utils.cu
src/data/: CMakeLists.txt  cpu_data_representation.cpp  data_batch.cpp  data_batch_view.cpp  data_repository.cpp  data_repository_manager.cpp  data_representation_converter.cpp  duckdb_data_representation.cpp  gpu_data_representation.cpp  host_parquet_representation.cpp  host_parquet_representation_converters.cpp  representation_converter.cpp  simple_data_repository_level.cpp
src/downgrade/: CMakeLists.txt  downgrade_executor.cpp  downgrade_task.cpp
src/expression_executor/: CMakeLists.txt  gpu_expression_executor.cpp  gpu_expression_executor_state.cpp  gpu_expression_translator.cpp
src/op/: CMakeLists.txt  rasterdb_physical_column_data_scan.cpp  rasterdb_physical_concat.cpp  rasterdb_physical_cte.cpp  rasterdb_physical_delim_join.cpp  rasterdb_physical_duckdb_scan.cpp  rasterdb_physical_dummy_scan.cpp  rasterdb_physical_empty_result.cpp  rasterdb_physical_filter.cpp  rasterdb_physical_grouped_aggregate.cpp  rasterdb_physical_grouped_aggregate_merge.cpp  rasterdb_physical_hash_join.cpp  rasterdb_physical_limit.cpp  rasterdb_physical_merge_sort.cpp  rasterdb_physical_nested_loop_join.cpp  rasterdb_physical_operator.cpp  rasterdb_physical_operator_type.cpp  rasterdb_physical_order.cpp  rasterdb_physical_parquet_scan.cpp  rasterdb_physical_partition.cpp  rasterdb_physical_partition_consumer_operator.cpp  rasterdb_physical_projection.cpp  rasterdb_physical_result_collector.cpp  rasterdb_physical_sort_partition.cpp  rasterdb_physical_sort_sample.cpp  rasterdb_physical_table_scan.cpp  rasterdb_physical_top_n.cpp  rasterdb_physical_ungrouped_aggregate.cpp  sirius_physical_column_data_scan.cpp  sirius_physical_concat.cpp  sirius_physical_cte.cpp  sirius_physical_delim_join.cpp  sirius_physical_duckdb_scan.cpp  sirius_physical_dummy_scan.cpp  sirius_physical_empty_result.cpp  sirius_physical_filter.cpp  sirius_physical_grouped_aggregate.cpp  sirius_physical_grouped_aggregate_merge.cpp  sirius_physical_hash_join.cpp  sirius_physical_limit.cpp  (+15 more)
src/op/aggregate/: aggregate_op_util.cpp  gpu_aggregate_impl.cpp
src/op/merge/: gpu_merge_impl.cpp
src/op/order/: gpu_order_impl.cpp
src/op/partition/: gpu_partition_impl.cpp
src/op/result/: host_table_chunk_reader.cpp
src/op/scan/: CMakeLists.txt  cached_ranges.cpp  duckdb_scan_executor.cpp  duckdb_scan_task.cpp  parquet_scan_task.cpp  prefetched_data_source.cpp
test/: 00_simple.db  00_simple.sql  00_simple_run.py  00_simple_setup.py  get_result_tpch.sql  get_result_tpch_mod.sql  test_join.sql  test_null.sql  test_python.py  test_varchar_gpu.sql  tpch_mod_sirius.test
tools/: parse_pipeline_log.py
tpch-gpu-queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
utils/stream_check/: .gitignore  CMakeLists.txt  README.md  stream_check.cpp  stream_check.hpp
(+687 files in other folders)
